<resources>
    <string name="app_name">ACCOUNTANCY</string>
    <string name="accountancy">Accountancy</string>
    <string name="todo">TODO</string>
    <string name="text_view">Over the centuries,\nAccounting has remained
                            confined to the financial record-keeping
                            functions of the accountant.\n\nBut, today’s rapidly changing business
                            environment has forced the accountants to
                            reassess their roles and functions both within
                            the organisation and the society.\n\nThe role of an accountant has now shifted
                            from that of
                            a mere recorder of transactions to that of the
                            member providing relevant information to the
                            decision-making team.\n\nBroadly speaking,
                            accounting today is much more than just bookkeeping
                            and the preparation of financial reports.\n\nAccountants are now capable of working in exciting
                            new growth areas such as: forensic accounting
                            \n(solving crimes such as computer hacking and the
                            theft of large amounts of money on the internet); ecommerce
                            (designing web-based payment system);
financial planning, environmental accounting, etc.\n\nThis realisation came due to the fact that accounting
is capable of providing the kind of information that
managers and other interested persons need in
order to make better decisions.\n\nThis aspect of
accounting gradually assumed so much importance
that it has now been raised to the level of an
information system.\n\nAs an information system, it
collects data and communicates economic
information about the organisation to a wide variety
of users whose decisions and actions are related to
its performance.\n\nThis introductory chapter
therefore, deals with the nature, need and scope of
accounting in this context.</string>
    <string name="MOA_textview">In 1941, The American Institute of Certified Public Accountants (AICPA) had
defined accounting as the art of recording, classifying, and summarising in a
significant manner and in terms of money, transactions and events which
are, in part at least, of financial character, and interpreting the results thereof’.
With greater economic development resulting in changing role of accounting,
its scope, became broader. In 1966, the American Accounting Association
(AAA) defined accounting as ‘the process of identifying, measuring and
communicating economic information to permit informed judgments and
decisions by users of information’.</string>
    <string name="MOA_textview2">In 1970, the Accounting Principles Board of AICPA also emphasised that
the function of accounting is to provide quantitative information, primarily
financial in nature, about economic entities, that is intended to be useful in
making economic decisions.
Accounting can therefore be defined as the process of identifying,
measuring, recording and communicating the required information relating
to the economic events of an organisation to the interested users of such
Fig. 1.1 : Showing the process of accounting
2020-21
Introduction to Accounting 3
information. In order to appreciate the exact nature of accounting, we must
understand the following relevant aspects of the definition:
• Economic Events
• Identification, Measurement, Recording and Communication
• Organisation
• Interested Users of Information</string>
    <string name="MOA_1.1.1"><B>1.1.1</B>\n\nEconomic Events
Business organisations involves economic events. An economic event is known
as a happening of consequence to a business organisation which consists of
transactions and which are measurable in monetary terms. For example,
purchase of machinery, installing and keeping it ready for manufacturing is
an event which comprises number of financial transactions such as buying a
machine, transportation of machine, site preparation for installation of a
machine, expenditure incurred on its installation and trial runs. Thus,
accounting identifies bunch of transactions relating to an economic event. If
an event involves transactions between an outsider and an organisation, these
are known as external events. The following are the examples of such
transactions:
• Sale of merchandise to the customers.
• Rendering services to the customers by ABC Limited.
• Purchase of materials from suppliers.
• Payment of monthly rent to the landlord.
An internal event is an economic event that occurs entirely between the
internal wings of an enterprise, e.g., supply of raw material or components by
the stores department to the manufacturing department, payment of wages
to the employees, etc.</string>
    <string name="AAS_textView">
 As discussed earlier, accounting is a definite processes of interlinked activities,
(refer figure 1.1) that begins with the identification of transactions and ends
with the preparation of financial statements. Every step in the process of
accounting generates information. Generation of information is not an end
in itself. It is a means to facilitate the dissemination of information among
different user groups. Such information enables the interested parties to
take appropriate decisions. Therefore, dissemination of information is an
essential function of accounting.\n\n To be useful, the accounting information should
ensure to:\n\t
• provide information for making economic \tdecisions;\n
• serve the users who rely on financial statements as their principal source
of information;\n
• provide information useful for predicting and evaluating the amount,
timing and uncertainty of potential cash-flows;\n
• provide information for judging management’s ability to utilise resources
effectively in meeting goals;\n\n
Introduction to Accounting 7 \n
• provide factual and interpretative information by disclosing underlying
assumptions on matters subject to interpretation, evaluation, prediction,
or estimation; \n
• provide information on activities affecting the society.\n\n
The role of an accountant in generating \naccounting information is to observe,
screen and recognise events and transactions to measure and process them,
and thereby compile reports comprising accounting information that are
communicated to the users. These are then interpreted, decoded and used
by management and other user groups.\n\n It must be ensured that the information
provided is relevant, adequate and reliable for decision-making.\nThe apparently
divergent needs of internal and external users of accounting information have
resulted in the development of sub-disciplines within the accounting discipline
namely, financial accounting, cost accounting and management accounting (refer
box 3).\n
Financial accounting assists keeping a systematic record of financial
transactions the preparation and presentation of financial reports in order to
arrive at a measure of organisational success and financial soundness.\nIt
relates to the past period, serves the stewardship function and is monetary in
nature.\nIt is primarily concerned with the provision of financial information to
all stakeholders.\n
Cost accounting assists in analysing the expenditure for ascertaining the
cost of various products manufactured or services rendered by the firm and

8 Accountancy
fixation of prices thereof.\n\nIt also helps in controlling the costs and providing
necessary costing information to management for decision-making.
Management accounting deals with the provision of necessary accounting
information to people within the organisation to enable them in decision-making,
planning and controlling business operations. Management accounting draws
the relevant information mainly from financial accounting and cost accounting
which helps the management in budgeting, assessing profitability, taking pricing
decisions, capital expenditure decisions and so on. Besides, it generates other
information (quantitative and qualitative, financial and non-financial) which
relates to the future and is relevant for decision-making in the organisation.
Such information includes: sales forecast, cash flows, purchase requirement,
manpower needs, environmental data about effects on air, water, land, natural
resources, flora, fauna, human health, social responsibilities, etc.
As a result, the scope of accounting has become so vast, that new areas
like human resource accounting, social accounting, responsibility accounting
have also gained prominance.
    </string>
    <string name="AAS_textView2">
1.2.1 \n\nQualitative Characteristics of Accounting Information
Qualitative characteristics are the attributes of accounting information which
tend to enhance its understandability and usefulness.\n\nIn order to assess
whether accounting information is decision useful, it must possess the
characteristics of reliability, relevance, understandability and comparability.
\nReliability
Reliability means the users must be able to depend on the information. The
reliability of accounting information is determined by the degree of
correspondence between what the information conveys about the transactions
or events that have occurred, measured and displayed.\nA reliable information
should be free from error and bias and faithfully represents what it is meant
to represent.\nTo ensure reliability, the information disclosed must be credible,
verifiable by independent parties use the same method of measuring, and be
neutral and faithful (refer figure 1.3).
        \t\tRelevance
To be relevant, information must be available in time, must help in prediction
and feedback, and must influence the decisions of users by :
(a) helping them form prediction about the outcomes of past, present or
future events; and/or
(b) confirming or correcting their past evaluations.
Understandability
Understandability means decision-makers must interpret accounting
information in the same sense as it is prepared and conveyed to them. The
qualities that distinguish between good and bad communication in a message
are fundamental to the understandability of the message. A message is said
to be effectively communicated when it is interpreted by the receiver of the
message in the same sense in which the sender has sent. Accountants should
present the comparable information in the most intenlligible manner without
sacrificing relevance and reliability.
    </string>
    <string name="basics">BASICS</string>
    <string name="meaning_of_accounting">Meaning of Accounting</string>
    <string name="accounting_as_a_source_of_information">Accounting as a Source of Information</string>
    <string name="objectives_of_accounting">Objectives of Accounting</string>
    <string name="role_of_accounting">Role of Accounting</string>
    <string name="basic_terms_in_accounting">Basic Terms in Accounting</string>
    <string name="accounting_as_source_of_information">Accounting as source of Information</string>
</resources>